log error for empty epoch list
cleanup test

revise test

fix import

fix typo

fallback to default epoch for unequal assignment epoch size

modify log msg and clean up